EDGEINV-34: Create new endpoint to support new inventory instance summary in mod-inventory and mod-inventory storage (#43)